metadata/force-app/main/default/objects/Competitors__c/Competitors__c.object-meta.xml
<CustomObject>
    <label>Competitors</label>
    <nameField>
        <label>Competitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>