metadata/force-app/main/default/objects/Competitors__c/fields/Battle_Deck__c.field-meta.xml
<CustomField>
    <fullName>Battle_Deck__c</fullName>
    <description>Link to the slides containing battle deck and company information.</description>
    <inlineHelpText>Link to the slides containing battle deck and company information.</inlineHelpText>
    <label>Battle Deck</label>
    <type>Url</type>
</CustomField>