metadata/force-app/main/default/objects/Competitors__c/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Funding</fullName>
            </value>
            <value>
                <fullName>Privately held</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>