metadata/force-app/main/default/objects/Competitors__c/fields/Company_website__c.field-meta.xml
<CustomField>
    <fullName>Company_website__c</fullName>
    <label>Company website</label>
    <type>Url</type>
</CustomField>