metadata/force-app/main/default/objects/Competitors__c/fields/DAM_10_Core__c.field-meta.xml
<CustomField>
    <fullName>DAM_10_Core__c</fullName>
    <label>DAM 10 Core?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>