metadata/force-app/main/default/objects/Competitors__c/fields/Forrester__c.field-meta.xml
<CustomField>
    <fullName>Forrester__c</fullName>
    <label>Forrester</label>
    <type>Url</type>
</CustomField>