metadata/force-app/main/default/objects/Competitors__c/fields/Gartner__c.field-meta.xml
<CustomField>
    <fullName>Gartner__c</fullName>
    <label>Gartner</label>
    <type>Url</type>
</CustomField>