metadata/force-app/main/default/objects/Competitors__c/fields/Handling_Objections__c.field-meta.xml
<CustomField>
    <fullName>Handling_Objections__c</fullName>
    <inlineHelpText>If they say this, then you say that.</inlineHelpText>
    <label>Handling Objections</label>
    <length>30000</length>
    <type>Html</type>
</CustomField>