metadata/force-app/main/default/objects/Competitors__c/fields/How_to_re_position_competitor__c.field-meta.xml
<CustomField>
    <fullName>How_to_re_position_competitor__c</fullName>
    <inlineHelpText>Admit that their product is good... but only for specific uses or quote their customer&apos;s (not-so-great) experience.</inlineHelpText>
    <label>How to re-position competitor</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>