metadata/force-app/main/default/objects/Competitors__c/fields/How_to_win__c.field-meta.xml
<CustomField>
    <fullName>How_to_win__c</fullName>
    <inlineHelpText>The most compelling argument that your prospect won’t say no to.</inlineHelpText>
    <label>How to win</label>
    <length>30000</length>
    <type>Html</type>
</CustomField>