metadata/force-app/main/default/objects/Competitors__c/fields/Integrations__c.field-meta.xml
<CustomField>
    <fullName>Integrations__c</fullName>
    <label>Integrations</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>