metadata/force-app/main/default/objects/Competitors__c/fields/Market_Presence__c.field-meta.xml
<CustomField>
    <fullName>Market_Presence__c</fullName>
    <inlineHelpText>Industry, 3rd party validations, market share &amp; revenue</inlineHelpText>
    <label>Market Presence</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>