metadata/force-app/main/default/objects/Competitors__c/fields/Number_of_Integrations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Integrations__c</fullName>
    <label>Number of Integrations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>