metadata/force-app/main/default/objects/Competitors__c/fields/of_employees__c.field-meta.xml
<CustomField>
    <fullName>of_employees__c</fullName>
    <label># of employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>