metadata/force-app/main/default/objects/Competitors__c/fields/Positioning__c.field-meta.xml
<CustomField>
    <fullName>Positioning__c</fullName>
    <inlineHelpText>What they say about themselves  Their marketing text &amp; company description</inlineHelpText>
    <label>Positioning</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>