metadata/force-app/main/default/objects/Competitors__c/fields/Product_Names__c.field-meta.xml
<CustomField>
    <fullName>Product_Names__c</fullName>
    <label>Product Names</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>