metadata/force-app/main/default/objects/Competitors__c/fields/Qualification_questions__c.field-meta.xml
<CustomField>
    <fullName>Qualification_questions__c</fullName>
    <inlineHelpText>Questions that you can ask to either understand their need OR nudge them in a certain direction</inlineHelpText>
    <label>Qualification questions</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>