metadata/force-app/main/default/objects/Competitors__c/fields/Real_Story_Group_RSG__c.field-meta.xml
<CustomField>
    <fullName>Real_Story_Group_RSG__c</fullName>
    <label>Real Story Group (RSG)</label>
    <type>Url</type>
</CustomField>