metadata/force-app/main/default/objects/Competitors__c/fields/Reviews__c.field-meta.xml
<CustomField>
    <fullName>Reviews__c</fullName>
    <defaultValue>&quot;Capterra: G2Crowd: Top10Reviews: Forrester: Gartner: IDC: RSG: &quot;</defaultValue>
    <inlineHelpText>Capterra, G2Crowd, Top10Reviews, Forrester, Gartner, IDC,RSG</inlineHelpText>
    <label>Reviews</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>