metadata/force-app/main/default/objects/Competitors__c/fields/Social_Presence_Twitter_Facebook_LInk__c.field-meta.xml
<CustomField>
    <fullName>Social_Presence_Twitter_Facebook_LInk__c</fullName>
    <inlineHelpText>Twitter, Facebook, LinkedIn followers</inlineHelpText>
    <label>Social Presence</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>