metadata/force-app/main/default/objects/Competitors__c/fields/Sources_Other__c.field-meta.xml
<CustomField>
    <fullName>Sources_Other__c</fullName>
    <label>Sources Other</label>
    <type>Url</type>
</CustomField>