metadata/force-app/main/default/objects/Competitors__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <label>Strengths</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>