metadata/force-app/main/default/objects/Competitors__c/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <inlineHelpText>Who are they targeting in terms of audience &amp; industry</inlineHelpText>
    <label>Target Audience</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>