metadata/force-app/main/default/objects/Competitors__c/fields/Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Weaknesses__c</fullName>
    <label>Weaknesses</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>