metadata/force-app/main/default/objects/Competitors__c/fields/When_to_walk_away__c.field-meta.xml
<CustomField>
    <fullName>When_to_walk_away__c</fullName>
    <inlineHelpText>Don’t waste your time anymore… just walk away.</inlineHelpText>
    <label>When to walk away</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>