metadata/force-app/main/default/objects/Competitors__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>of_employees__c</columns>
    <columns>Company_Type__c</columns>
    <columns>Pricing__c</columns>
    <columns>Strengths__c</columns>
    <columns>Target_Audience__c</columns>
    <columns>Weaknesses__c</columns>
    <columns>When_to_walk_away__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>