metadata/force-app/main/default/objects/Competitors__c/listViews/Emily_New_View.listView-meta.xml
<ListView>
    <fullName>Emily_New_View</fullName>
    <columns>NAME</columns>
    <columns>Estimated_Revenue__c</columns>
    <columns>Strengths__c</columns>
    <columns>Weaknesses__c</columns>
    <columns>Handling_Objections__c</columns>
    <columns>How_to_re_position_competitor__c</columns>
    <columns>How_to_win__c</columns>
    <columns>Number_of_Integrations__c</columns>
    <filterScope>Everything</filterScope>
    <label>Competitor Profiles Overview</label>
</ListView>